JumpScript/tests/baselines/reference/noImplicitAnyStringIndexerOnObject.errors.txt
tests/cases/compiler/noImplicitAnyStringIndexerOnObject.jump(1,9): error TS7017: Element implicitly has an 'any' type because type '{}' has no index signature.


==== tests/cases/compiler/noImplicitAnyStringIndexerOnObject.jump (1 errors) ====
    var x = {}["hello"];
            ~~~~~~~~~~~
!!! error TS7017: Element implicitly has an 'any' type because type '{}' has no index signature.
    var y: string = { '': 'foo' }[''];